--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -28,7 +28,7 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-remote_theme: minima
+remote_theme: just-the-docs/just-the-docs@v0.3.3
 plugins:
   - jekyll-feed
 
@@ -51,3 +51,7 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+
+aux_links:
+  Template Repository: https://github.com/just-the-docs/just-the-docs-template
